# dune-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mise.toml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: constants.py  main.py  response_models.py  utils.py
app/core/: csv.py  database.py  logging.py  responses.py  types.py
app/database/: connection.py
app/database/tests/: conftest.py  test_connection.py
app/domain/: models.py
app/migrations/: 001.sql  002.sql  003.sql  004.sql  005.sql  006.sql  007.sql
app/services/: annotation_service.py  character_service.py  geospatial_service.py  house_service.py  organisation_service.py  planet_service.py
app/v1/: constants.py  database.py  dependencies.py  queries.py  query.py  request_models.py  response_models.py  router.py  schema.sql  schemas.py  services.py  utils.py
app/v1/character/: queries.py
app/v1/database/: client.py  models.py  query.py  utils.py
data/: character.csv  character_organisation.csv  house.csv  organisation.csv  planet.csv  seed.sql
db/: schema.sql
db/migrations/: 20250913000001_create_house_table.sql  20250913000002_create_organisation_table.sql  20250913000003_create_character_table.sql  20250913000004_create_character_organisation_table.sql  20250913000005_create_character_with_org_view.sql  20250913000006_create_planet_table.sql  20250913000007_create_fts_tables.sql  20250914065144_create_annotations_table.sql
scripts/: seed_database.py
tests/: conftest.py  seed_data.py  test.db  utils.py
tests/core/: test_database.py
tests/services/: test_annotation_service.py  test_character_service.py  test_house_service.py  test_organisation_service.py  test_planet_service.py
tests/setup/: __main__.py  seed_data.py  teardown.py  utils.py
tests/v1/: conftest.py  test_database.py  test_queries.py  test_query.py  test_response_models.py  test_router.py  test_schemas.py  test_services.py
tests/v1/character/: test_database_models.py  test_queries.py  test_response_models.py
tests/v1/database/: test_client.py  test_models.py  test_query.py
(+1 files in other folders)
